--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,3 +1,8 @@
 <h3>Trainer</h3>
 <p>Name: <%= @trainer.name if @trainer.name %></p>
 <p>Email: <%= @trainer.email if @trainer.email %></p>
+<h3> POKEMON </h3>
+<% @pokemon.each do |p| %>
+  <h4> <%= p.name %> </h4>
+  <p> Level: <%= p.level %> </p>
+<% end %>
