I am a Pokemon master.

--- a/app/views/pokemon/new.html.erb
+++ b/app/views/pokemon/new.html.erb
@@ -1,3 +1,4 @@
+<h3> Create your Pokemon </h3>
 <%= simple_form_for @pokemon, url: {action: "create"} do |p| %>
   <%= p.input :name %>
   <%= p.button :submit %>
